# Study-GraphRAG

./: .env.example  LICENSE  README.md  docker-compose.yml  pyproject.toml
data/: demo_articles.jsonl  sample_articles.jsonl
docs/: architecture.md  data-model.md  examples.md  implementation-zh.md  index.md  ingestion-guide.md  query-guide.md  scope-and-goals.md
scripts/: ingest.py  query.py  serve.py
src/study_graphrag/: __init__.py  config.py
src/study_graphrag.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/study_graphrag/generation/: __init__.py  answer_generator.py
src/study_graphrag/graph/: __init__.py  client.py  models.py
src/study_graphrag/ingestion/: __init__.py  entity_extractor.py  pipeline.py  relation_extractor.py
src/study_graphrag/retrieval/: __init__.py  embedder.py  graph_searcher.py
src/study_graphrag/web/: __init__.py  app.py
src/study_graphrag/web/static/: index.html
