[project]
name = "study-graphrag"
version = "0.1.0"
description = "Graph-based Retrieval-Augmented Generation for the biomedical domain using Neo4j"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "neo4j>=5.14.0",
    "openai>=1.30.0",
    "sentence-transformers>=3.0.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.66.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 79
indent-width = 2

[tool.ruff.lint]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
